full-moon/tests/roblox_cases/fail/tokenizer/unfinished-string-interpolation/error_display.snap
---
source: full-moon/tests/fail_cases.rs
assertion_line: 56
expression: "String::from_utf8(output.into_inner()).unwrap()"
input_file: full-moon/tests/roblox_cases/fail/tokenizer/unfinished-string-interpolation
---
error[tokenizer]: unclosed string (1:11 to 1:16)
  ┌─ source.lua:1:11
  │
1 │ local _ = `asdf
  │           ^^^^^


